# Rizz-Engine

./: .gitmodules  CMakeLists.txt  README.md  build_debug.bat  build_release.bat  clean.bat  generate_project.bat
.github/workflows/: windows-platform.yml
automation/: automation.py  build.bat
doc/: coments.txt
editor/: main.cpp
engine/: Aplication.cpp  Aplication.h  CMakeLists.txt  Logger.cpp  Logger.h  Macro.h  RizzEngine.h  hzpch.h  platform_detection.h  typedefs.h
engine/core/: application.cpp  application.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  window.cpp  window.h
engine/core/event/: event.cpp  event.h  event_args.cpp  event_args.h
engine/input/: input_code.h
engine/logger/: logger.cpp  logger.h
engine/rendering/open_gl/: gl_window.cpp  gl_window.h
engine/rendering/open_gl/window/: gl_window.cpp
